--- a/app/assets/stylesheets/admin/user_records.css.scss
+++ b/app/assets/stylesheets/admin/user_records.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the UserRecords controller here.
+// Place all the styles related to the Admin/UserRecords controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
